feat: 迁移到 Spring AI Alibaba 基座，ChatClient 改用 ReactAgent
- chat-service: Spring Boot 3.4→3.5.14, DeepSeek→DashScope, ChatClient→ReactAgent(ReAct循环)
- rag-retrieval-service: 原始 dashscope-sdk→Spring AI EmbeddingModel, Spring Boot 3.5.14
- doc-processing-service: 统一使用 SAA PoiDocumentReader+TikaDocumentParser, 删除自定义Parser